fix wrapping of text between links

--- a/_app/assets/_scss/_user.scss
+++ b/_app/assets/_scss/_user.scss
@@ -270,6 +270,7 @@ svg {
   display: inline;
   list-style: none;
   margin-left: 0em;
+  overflow-wrap: break-word;
 
   li {
     display: inline;
